--- a/roles/ansible-pull/templates/ansible-pull-cron.j2
+++ b/roles/ansible-pull/templates/ansible-pull-cron.j2
@@ -1,7 +1,9 @@
 SHELL=/bin/bash
-PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
+PATH=/usr/local/bin/:/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 HOME={{ ansible_pull_workdir }}
-
-{% if ansible_pull_remote_execute_repo is defined and ansible_pull_remote_execute_repo != "" %}{{ ansible_pull_remote_execute_cron }}  root    /usr/local/bin/ansible-pull {{ ansible_pull_cmd_flags }} -U {{ ansible_pull_remote_execute_repo }} -i /var/ansible-pull/inventory >> {{ ansible_pull_remote_execution_log }}{% endif %}
-
-{% if ansible_pull_drift_repo is defined and ansible_pull_drift_repo != "" %}{{ ansible_pull_drift_cron }}    root    /usr/local/bin/ansible-pull -U {{ ansible_pull_drift_repo }} -i /var/ansible-pull/inventory >> {{ ansible_pull_drift_log }}{% endif %}
+{% if ansible_pull_remote_execute_repo is defined and ansible_pull_remote_execute_repo != "" %}
+{{ ansible_pull_remote_execute_cron }}  root   ansible-pull {{ ansible_pull_cmd_flags }} -U {{ ansible_pull_remote_execute_repo }} -i {{ ansible_pull_workdir }}/inventory >> {{ ansible_pull_remote_execution_log }}
+{% endif %}
+{% if ansible_pull_cluster_ops_repo is defined and ansible_pull_cluster_ops_repo != "" %}
+{{ ansible_pull_drift_cron }}    root    ansible-pull -U {{ ansible_pull_cluster_ops_repo }} -i {{ ansible_pull_workdir }}/inventory >> {{ ansible_pull_drift_log }}
+{% endif %}
