disabling VMRuntims CDI Importer
Change-Id: If2d732a0e4460105dc6fe97253261436e835a19a

--- a/roles/abm-software/templates/vmruntime-config.yaml.j2
+++ b/roles/abm-software/templates/vmruntime-config.yaml.j2
@@ -6,3 +6,7 @@ spec:
   enabled: {{ enable_vmruntime }}
   useEmulation: {{ kubevirt_use_emulation }}
   vmImageFormat: qcow2
+  disableCDIUploadProxyVIP: {{ disable_cdi_upload_proxy_vip }}
+  # storage:
+  #  properties:
+  #    defaultScratchSpaceStorageClass: "local-shared"
