--- a/roles/abm-install/templates/cluster-config.yaml.j2
+++ b/roles/abm-install/templates/cluster-config.yaml.j2
@@ -16,7 +16,7 @@ kind: Cluster
 metadata:
   annotations:
     # Used to enable Network Connectivity Gateway for cluster VPN
-    baremetal.cluster.gke.io/enable-gng: "{{ network_connectivity_gateway_install }}"
+    baremetal.cluster.gke.io/enable-gng: "{{ network_connectivity_gateway_install | lower }}"
     # This annotation allows AddOn Configuraiton to be applied to clusters (go/gdc-consumer-edge:ansible-playbook-explain-addon-config). Currently setup for Stackdriver config patching in ACM
     # preview.baremetal.cluster.gke.io/add-on-configuration: enable
   name: {{ cluster_name }}
