changes to support first round of CE on any cluster
Change-Id: I89b1f51be284b10c8fe58adcd2e41472fa382292

--- a/roles/abm-software/templates/vmruntime-config.yaml.j2
+++ b/roles/abm-software/templates/vmruntime-config.yaml.j2
@@ -7,6 +7,7 @@ spec:
   useEmulation: {{ kubevirt_use_emulation }}
   vmImageFormat: qcow2
   disableCDIUploadProxyVIP: {{ disable_cdi_upload_proxy_vip }}
-  # storage:
-  #  properties:
-  #    defaultScratchSpaceStorageClass: "local-shared"
+  evictionPolicy:
+    migrationTargetInitializationTimeout: 90s
+  {# storage:
+    defaultStorageClass: robin-immediate #}
