enforce vm-runtime to use robin-block-immediate at all times
Change-Id: I2d1cf597a23537e0b7963d4f982cd26738716a03

--- a/roles/abm-software/templates/vmruntime-config.yaml.j2
+++ b/roles/abm-software/templates/vmruntime-config.yaml.j2
@@ -9,5 +9,5 @@ spec:
   disableCDIUploadProxyVIP: {{ disable_cdi_upload_proxy_vip }}
   evictionPolicy:
     migrationTargetInitializationTimeout: 90s
-  {# storage:
-    defaultStorageClass: robin-immediate #}
+  storage:                                                    # Robin Block Immediate is required for LiveMigration
+    defaultStorageClass: robin-block-immediate
