moving hard-coded variables out of templates

--- a/roles/abm-post-install/templates/cluster-validation.sh.j2
+++ b/roles/abm-post-install/templates/cluster-validation.sh.j2
@@ -73,7 +73,7 @@ function pretty_print() {
 HAS_ERROR=false
 
 # Gateway
-RESULT=$(ping -c 3 172.16.20.1)
+RESULT=$(ping -c 3 "{{ gateway_ip }}")
 if [[ $? -ne 0 ]]; then
   pretty_print "Gateway ping failed" "ERROR"
   HAS_ERROR=true
